--- a/_config.yml
+++ b/_config.yml
@@ -12,13 +12,13 @@
 #minimal_mistakes_skin : "dark" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 locale                   : "en-US"
-title                    : "Sandesh Bhat"
+title                    : "Theodoros Nakas"
 title_separator          : "-"
-name                     : &name "Sandesh Bhat"
-description              : &description "Research Fellow, Mayo Clinic"
+name                     : &name "Theodoros Nakas"
+description              : &description "Theoretical Physicist"
 url                      : https://DrSGBhat.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "DrSGBhat/DrSGBhat.github.io"
+repository               : "thnakas/thnakas.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
