--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@
 #minimal_mistakes_skin : "dark" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 locale                   : "en-US"
-title                    : "Theodoros Nakas"
+title                    : "Homepage"
 title_separator          : "-"
 name                     : &name "Theodoros Nakas"
 description              : &description "Theoretical Physicist"
