--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,11 +1,11 @@
 # Authors
 
 Name Name:
-  name        : "Sandesh Bhat"
-  uri         : "http://drsgbhat.github.io"
-  email       : "mrsandeshbhat@gmail.com"
+  name        : "Theodoros Nakas"
+  uri         : "http://thnakas.github.io"
+  email       : "thnakas@ibs.re.kr"
   #bio         : "This is the first name."
-  avatar      : "sandesh.jpg"
+  avatar      : "Theodoros_Nakas.png"
   #twitter     : "name"
   #google_plus : "Name"
 
