--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ title                    : "Homepage"
 title_separator          : "-"
 name                     : &name "Theodoros Nakas"
 description              : &description "Theoretical Physicist"
-url                      : https://DrSGBhat.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://thnakas.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "thnakas/thnakas.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
