--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 
 locale                   : "en-US"
 title                    : "Homepage"
-title_separator          : "-"
+title_separator          : " "
 name                     : &name "Theodoros Nakas"
 description              : &description "Theoretical Physicist"
 url                      : https://thnakas.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
