--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@
 #minimal_mistakes_skin : "dark" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 locale                   : "en-US"
-title                    : "Homepage"
-title_separator          : " "
+title                    : "Theodoros Nakas"
+title_separator          : "-"
 name                     : &name "Theodoros Nakas"
 description              : &description "Theoretical Physicist"
 url                      : https://thnakas.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
