--- a/_config.yml
+++ b/_config.yml
@@ -84,36 +84,57 @@ analytics:
 author:
   name             : "Theodoros Nakas"
   avatar           : "Theodoros_Nakas.png"
-  bio              : "Theoretical Physicist"
-  location         : "Deajeon, South Korea"
-  employer         : 
+  bio              : "Theoretical Physicist <br> Researcher at IBS CTPU-CGA <br>"
+  location         : "Deajeon, South Korea" #for the link go to ../includes/author-profile/ in the location section
+  employer         : "Institute for Basic Science (IBS)" #for the link go to ../includes/author-profile/ in the employer section
   googlescholar    : "https://scholar.google.com/citations?hl=en&user=Dx9aVjgAAAAJ"
-  email            : "mrsandeshbhat@gmail.com"
+  email            : #"theodoros.nakas@gmail.com"
+  inst_email       : "thnakas@ibs.re.kr"
   uri              : 
-  bitbucket        :
-  codepen          :
-  dribbble         :
-  flickr           :
-  facebook         : 
-  foursquare       :
-  github           : "mrsandeshbhat"
-  google_plus      :
-  keybase          :
-  instagram        : "this_shutter"
-  lastfm           :
-  linkedin         : "mrsandeshbhat"
-  orcid            : "https://orcid.org/0000-0002-8989-0235"
-  pinterest        :
-  soundcloud       :
-  stackoverflow    : # http://stackoverflow.com/users/123456/username
-  steam            :
-  tumblr           :
-  twitter          : 
-  vine             :
-  weibo            :
-  xing             :
-  youtube          :
-  wikipedia        : 
+  
+  #Academic websites
+  inspire          : "https://inspirehep.net/authors/1613452"
+  arxiv            : #"https://arxiv.org/search/?query=Theodoros+Nakas&searchtype=author&abstracts=show&order=-announced_date_first&size=50"
+  googlescholar    : "https://scholar.google.com/citations?user=vaFy8moAAAAJ&hl=en"
+  impactstory      : # URL
+  orcid            : "https://orcid.org/0000-0002-3522-5803"
+  semantic         : # URL
+  pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  researchgate     : "https://www.researchgate.net/profile/Theodoros-Nakas"
+
+  # Repositories and software development
+  bitbucket        : # Username - Update with your username on the site
+  codepen          : # Username
+  dribbble         : # Username
+  github           : #
+  kaggle           : # Username  
+  stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
+
+  # Social media
+  bluesky          : #"bsky.app" # Replace this with you Bluesky username
+  facebook         : # Username
+  flickr           : # Username
+  foursquare       : # Username
+  goodreads        : # Username
+  google_plus      : # Username
+  keybase          : # Username
+  instagram        : # Username
+  lastfm           : # Username
+  linkedin         : theodoros-nakas
+  mastodon         : # URL
+  medium           : # URL
+  pinterest        : # Username
+  soundcloud       : # Username
+  steam            : # Username
+  telegram         : # URL
+  tumblr           : # Username
+  twitter          : # Username for X / Twitter
+  vine             : # Username
+  weibo            : # Username
+  wikipedia        : # Username
+  xing             : # Username
+  youtube          : # Username
+  zhihu            : # Username
 
 
 # Reading Files
