--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
 # main links links
 main:
   
-  - title: "Research"
-    url: /research/
+  - title: "Research & Publications"
+    url: /publications/
 
   # - title: "Awards & Honors"
   #   url: /awards/
