--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
 # main links links
 main:
   
-  - title: "Research & Publications"
-    url: /publications/
+  #- title: "Research & Publications"
+  #  url: /publications/
 
   # - title: "Awards & Honors"
   #   url: /awards/
@@ -13,14 +13,14 @@ main:
   #- title: "Photography"
   #  url: /Photography/    
     
-  - title: "Talks"
-    url: /talks/
+  #- title: "Talks"
+  #  url: /talks/
         
   - title: "Teaching"
     url: /teaching/
     
-  - title: "CV"
-    url: /cv/
+  #- title: "CV"
+  #  url: /cv/
 
   - title: "Contact"
     url: /contact/  
