--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,7 +14,7 @@ main:
   #  url: /Photography/    
     
   - title: "Talks"
-    url: /talks2/
+    url: /conferences/
         
   - title: "Teaching"
     url: /teaching/
