--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,7 +13,7 @@ main:
   #- title: "Photography"
   #  url: /Photography/    
     
-  - title: "Talks"
+  - title: "Conference Talks"
     url: /conferences/
         
   - title: "Teaching"
