--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,7 +20,7 @@ main:
     url: /teaching/
     
   #- title: "CV"
-  #  url: /cv/
+  #  url: /resume/
 
   - title: "Contact"
     url: /contact/  
