--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -5,7 +5,7 @@ Name Name:
   uri         : "http://thnakas.github.io"
   email       : "thnakas@ibs.re.kr"
   #bio         : "This is the first name."
-  avatar      : "Theodoros_Nakas.png"
+  avatar      : "Theodoros_Nakas.jpg"
   #twitter     : "name"
   #google_plus : "Name"
 
