--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ analytics:
 # Site Author
 author:
   name             : "Theodoros Nakas"
-  avatar           : "Theodoros_Nakas.png"
+  avatar           : "Theodoros_Nakas.jpg"
   bio              : "Theoretical Physicist <br> Researcher at IBS CTPU-CGA <br>"
   location         : "Deajeon, South Korea" #for the link go to ../includes/author-profile/ in the location section
   employer         : "Institute for Basic Science (IBS)" #for the link go to ../includes/author-profile/ in the employer section
